test/types/range/enum/castEnumRange2.chpl
enum color { red, green, blue };

var r = color.red..color.blue;
var r2 = r: range(int);
writeln(r2);
